#424: Updated parameters for createEntityListItemAttribute; added editEntityListItemAttribute and deleteEntityListItemAttribute